[gd_scene load_steps=6 format=3 uid="uid://bss5euchhbvrw"]

[ext_resource type="Texture2D" uid="uid://b4nxhf5mv7esw" path="res://Assets/units/box_base.png" id="1_g3xcj"]
[ext_resource type="StyleBox" uid="uid://b8ol31xman026" path="res://Objects/Themes/unit_card.tres" id="1_xnqhi"]
[ext_resource type="Script" path="res://Objects/Battle/unit_card.gd" id="1_yyd1l"]
[ext_resource type="Texture2D" uid="uid://crqpe8b8m1dw6" path="res://Assets/units/box_type_bow.png" id="2_x1ilp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0fwb"]

[node name="UnitCard" type="PanelContainer"]
offset_right = 70.0
offset_bottom = 93.0
theme_override_styles/panel = ExtResource("1_xnqhi")
script = ExtResource("1_yyd1l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VH" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VH"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Name"

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/VH"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_t0fwb")

[node name="TextureBase" type="TextureRect" parent="MarginContainer/VH/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_g3xcj")
expand_mode = 4
stretch_mode = 4

[node name="TextureType" type="TextureRect" parent="MarginContainer/VH/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_x1ilp")
expand_mode = 4
stretch_mode = 4

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
